<resources>
    <string name="app_name">TrabalhoFinal</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="livros">Livros</string>
    <string name="pessoas">Pessoas</string>
    <string name="paises">Paises</string>
    <string name="bem_vindo_ao_notebookcovid">Bem-Vindo ao CovidNoteBook</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO1</string>
    <string name="stars">Stars</string>
    <string name="Euro">€</string>
    <string name="avalia_o">Avaliação</string>
    <string name="nome_do_livro">Nome do Livro</string>
    <string name="tipo">Tipo</string>
    <string name="adicionar_pais">Adicionar Pais</string>
    <string name="adicionar_pessoa">Adicionar Pessoa</string>
    <string name="Necessario_NomeLivro">Adicionar Nome do Livro </string>
    <string name="Necessario_AvaLivro">Adicionar Avaliação do Livro </string>
    <string name="Necessario_TipoLivro">Adicionar Tipo do Livro </string>
    <string name="ErroAdicionarLivro">Erro ao Adicionar Livro </string>
    <string name="adicionar_livro">Adicionar Livro</string>
    <string name="home">Home</string>
    <string name="nome_pais">Nome Pais</string>
    <string name="pre_o">Preço</string>
    <string name="avalia_o_do_pre_o">Avaliação do Preço</string>

    <string name="Necessario_NomePais">Adicionar Nome do Pais </string>
    <string name="Necessario_AvaPre">Adicionar Avaliação do Preço </string>
    <string name="Necessario_Pre">Adicionar Preço </string>
    <string name="ErroAdicionarPais">Erro ao Adicionar Pais</string>

    <string name="nome">Nome:</string>
    <string name="morada">Morada:</string>
    <string name="data_nas">Data Nas.:</string>
    <string name="cc">CC:</string>
    <string name="contacto">Contacto:</string>
    <string name="vacinas">Vacinas:</string>
    <string name="numero_de_vacinas">Numero de Vacinas</string>
    <string name="contacto_pessoal">Contacto Pessoal</string>
    <string name="cart_o_de_cidad_o">Cartão de Cidadão</string>
    <string name="data_de_nascimento">Data de Nascimento</string>
    <string name="morada_atual">Morada Atual</string>
    <string name="nome_da_pessoa">Nome da Pessoa</string>

    <string name="Necessario_NomePessoa">Adicionar Nome da Pessoa </string>
    <string name="Necessario_Morada">Adicionar Morada </string>
    <string name="Necessario_Data">Adicionar Data Nascimento </string>
    <string name="Necessario_CC">Adicionar Cartão de Cidadão </string>
    <string name="Necessario_Contacto">Adicionar Contacto </string>
    <string name="Necessario_NumVacina">Adicionar Numero de Vacinas </string>
    <string name="ErroAdicionarPessoa">Erro ao Adicionar Pessoa</string>
    <string name="editar">Editar</string>
    <string name="erro_eliminar_livro">Erro ao Eliminar Livro</string>
    <string name="livro_eliminado_sucesso">Livro Eliminado</string>
    <string name="erro_alterar_livro">Erro Ao Editar Livro</string>
    <string name="livro_guardado_sucesso">Editado Com sucesso</string>
    <string name="editar_livro">Editar Livro</string>
    <string name="eliminar">Eliminar</string>
    <string name="editar_pais">Editar Pais</string>
    <string name="erro_eliminar_pais">Erro ao Eliminar Pais</string>
    <string name="pais_eliminado_sucesso">Sucesso Ao Eliminar Pais</string>
    <string name="erro_alterar_pais">Erro ao Alterar Pais</string>
    <string name="pais_guardado_sucesso">Sucesso ao Editar Pais</string>
    <string name="SelecinarDaLista">Selecionar um Item da Lista</string>
    <string name="pessoa_guardado_sucesso">Pessoa Editada Com Sucesso</string>
    <string name="erro_alterar_pessoa">Erro Editar Pessoa</string>
    <string name="erro_eliminar_pessoa">Erro ao Eliminar Pessoa</string>
    <string name="pessoa_eliminado_sucesso">Pessoa Eliminada Com sucesso</string>
    <string name="AvaliaErro">Avaliação de 0-5</string>
    <string name="Vacina_Max">Vacinação Maxima atual de 2 Vacinas</string>
    <string name="ContactoInvalido">Contacto Invalido</string>
    <string name="CCInvalido">CC invalido</string>
    <string name="LOGO">TODO</string>
</resources>