<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPessoaNome"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/nome_da_pessoa"
            android:inputType="textPersonName" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPessoaMorada"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/morada_atual"
                android:inputType="textPersonName" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextDataNascimento"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="@string/data_de_nascimento"
                    android:inputType="datetime" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="167dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextPessoaCC"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:hint="@string/cart_o_de_cidad_o"
                        android:inputType="phone" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextPessoaContacto"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:hint="@string/contacto_pessoal"
                            android:inputType="phone" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/editTextPessoaNumPessoa"
                                android:layout_width="match_parent"
                                android:layout_height="60dp"
                                android:hint="@string/numero_de_vacinas"
                                android:inputType="phone" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </com.google.android.material.textfield.TextInputLayout>

                </com.google.android.material.textfield.TextInputLayout>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buttonAdicionarPessoa"
                android:layout_width="421dp"
                android:layout_height="289dp"
                android:layout_marginBottom="250dp"
                android:layout_weight="1"
                android:text="@string/adicionar_pessoa" />

        </com.google.android.material.textfield.TextInputLayout>

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>